docs: update nonsensitive docs to not show error (#1391)
Signed-off-by: Jonas Bakken <jonasbakken@protonmail.com>

--- a/website/docs/language/functions/nonsensitive.mdx
+++ b/website/docs/language/functions/nonsensitive.mdx
@@ -98,11 +98,7 @@ the local value `mixed_content`, with a valid JSON string assigned to
 > nonsensitive(local.mixed_content["username"])
 "zqb"
 > nonsensitive("clear")
-
-Error: Invalid function argument
-
-Invalid value for "value" parameter: the given value is not sensitive, so this
-call is redundant.
+"clear"
 ```
 
 Note though that it's always your responsibility to use `nonsensitive` only
