--- a/website/docs/cli/config/environment-variables.mdx
+++ b/website/docs/cli/config/environment-variables.mdx
@@ -162,6 +162,16 @@ If `TF_IGNORE` is set to "trace", OpenTofu will output debug messages to display
 export TF_IGNORE=trace
 ```
 
+## TF_PROVIDER_DOWNLOAD_RETRY
+
+Set `TF_PROVIDER_DOWNLOAD_RETRY` to configure the max number of request retries
+the remote provider client will attempt for client connection errors or
+500-range responses that are safe to retry.
+
+```shell
+export TF_PROVIDER_DOWNLOAD_RETRY=3
+```
+
 For more details on `.terraformignore`, please see [Excluding Files from Upload with .terraformignore](/docs/language/settings/backends/remote#excluding-files-from-upload-with-terraformignore).
 
 ## Cloud Backend CLI Integration
