doc: add -json flag doc for init and get command (#1460)
Signed-off-by: Syasusu <syasusu@163.com>

--- a/website/docs/cli/commands/get.mdx
+++ b/website/docs/cli/commands/get.mdx
@@ -21,3 +21,6 @@ The `get` command supports the following option:
   checked for updates and the updates will be downloaded if present.
 
 * `-no-color` - Disable text coloring in the output.
+
+* `-json` Produce output in a machine-readable JSON format, suitable for use
+  in text editor integrations and other automated systems. Always disables color.
