--- a/website/docs/cli/commands/init.mdx
+++ b/website/docs/cli/commands/init.mdx
@@ -43,6 +43,9 @@ The following options apply to all of (or several of) the initialization steps:
 * `-upgrade` Opt to upgrade modules and plugins as part of their respective
   installation steps. See the sections below for more details.
 
+* `-json` Produce output in a machine-readable JSON format, suitable for use
+  in text editor integrations and other automated systems. Always disables color.
+
 ## Copy a Source Module
 
 By default, `tofu init` assumes that the working directory already
